# DOOM

./: .clang-format  .clang-tidy  .gitignore  .syntastic_c_config  CMakeLists.txt  Makefile  TODO.md  utils
gdb/: x11.gdb
include/: am_map.h  am_map.hpp  d_englsh.h  d_event.h  d_french.h  d_items.h  d_main.hpp  d_net.h  d_net.hpp  d_player.h  d_player.hpp  d_think.h  d_ticcmd.h  doomdata.h  doomdef.h  doomdef.hpp  doomstat.h  doomstat.hpp  doomtype.h  doomtype.hpp  dstrings.h  dstrings.hpp  f_finale.hpp  hu_lib.h  hu_lib.hpp  i_sound.h  i_system.h  i_system.hpp  i_video.h  info.h  m_bbox.h  m_bbox.hpp  m_cheat.h  m_menu.h  m_menu.hpp  m_swap.h  p_inter.h  p_local.h  p_local.hpp  p_mobj.h  (+21 more)
linuxdoom-1.10/: .clang-format  Makefile  am_map.c  am_map.cpp  am_map.h  d_englsh.h  d_event.hpp  d_french.h  d_items.cpp  d_main.cpp  d_net.c  d_net.cpp  d_textur.hpp  doomdata.h  doomstat.c  doomstat.cpp  doomstat.h  dstrings.c  dstrings.cpp  f_finale.c  f_finale.cpp  f_wipe.cpp  f_wipe.h  g_game.c  g_game.cpp  g_game.hpp  hu_lib.c  hu_lib.cpp  hu_lib.h  hu_stuff.c  hu_stuff.cpp  hu_stuff.h  i_main.cpp  i_net.cpp  i_sound.c  i_sound.cpp  i_system.cpp  i_video.c  i_video.cpp  info.cpp  (+76 more)
linuxdoom-1.10/include/: am_map.hpp  d_event.hpp  d_items.hpp  d_player.hpp  d_textur.hpp  d_think.hpp  d_ticcmd.hpp  doomdata.hpp  doomdef.hpp  doomstat.hpp  doomtype.hpp  f_finale.hpp  g_game.hpp  hu_lib.hpp  hu_stuff.hpp  i_sound.hpp  i_video.hpp  info.hpp  m_bbox.hpp  m_cheat.hpp  m_menu.hpp  m_misc.hpp  m_random.hpp  p_inter.hpp  p_local.hpp  p_pspr.hpp  r_bsp.hpp  r_data.hpp  r_defs.hpp  r_local.hpp  r_main.hpp  r_plane.hpp  r_state.hpp  r_things.hpp  st_lib.hpp  st_stuff.hpp  tables.hpp  v_video.hpp  wi_stuff.hpp
scripts/: build  command.gdb  configure-debug  configure-release  debug  debug.gdb  run  utils
scripts/32/: configure-debug
sndserv/: Makefile  linux.c  sounds.c  sounds.h  soundsrv.c  soundsrv.h  soundst.h  wadread.c  wadread.h
src/: .clang-format  Makefile  am_map.c  am_map.cpp  d_items.c  d_main.c  d_main.cpp  d_net.c  d_net.cpp  doomdef.cpp  doomstat.c  dstrings.c  f_finale.c  f_finale.cpp  f_wipe.c  g_game.c  g_game.cpp  hu_lib.c  hu_lib.cpp  hu_stuff.c  i_main.c  i_net.c  i_net.cpp  i_sdl.c  i_sound.c  i_system.c  i_system.cpp  i_video.c  i_video.cpp  info.c  info.cpp  m_argv.c  m_bbox.c  m_cheat.c  m_cheat.cpp  m_fixed.c  m_menu.c  m_misc.c  m_random.c  m_swap.c  (+58 more)
src/archive/: i_video.c
toolchains/: toolchain32.cmake
